Adição dos Comentários

--- a/VehicleLog_webForm/Vehicle_Log_MVC/Vehicle_Log_MVC/Views/ActiveVehicleDBs/Delete.cshtml
+++ b/VehicleLog_webForm/Vehicle_Log_MVC/Vehicle_Log_MVC/Views/ActiveVehicleDBs/Delete.cshtml
@@ -5,6 +5,11 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
+@*
+    Este módulo representa a View da interface de remoção do item selecionado do banco de dados ActiveVehicleDB.
+    Nele será possível configurar e formatar a interface e seus componentes listados.
+*@
+
 <section class="wrapper">
     <div class="row">
         <div class="col-md-12">
@@ -144,4 +149,4 @@
     </div>
 </section>
 
-                
+
