--- a/VehicleLog_webForm/Vehicle_Log_MVC/Vehicle_Log_MVC/Views/ActiveVehicleDBs/Index.cshtml
+++ b/VehicleLog_webForm/Vehicle_Log_MVC/Vehicle_Log_MVC/Views/ActiveVehicleDBs/Index.cshtml
@@ -5,7 +5,10 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-
+@*
+    Este módulo representa a View da interface Index, onde os itens do banco de dados ActiveVehicleDB serão listados.
+    Nele será possível configurar e formatar a interface e seus componentes, como quais elemebtos serão apresentadas.
+*@
 
 <section class="wrapper">
     <div class="row">
