--- a/VehicleLog_webForm/Vehicle_Log_MVC/Vehicle_Log_MVC/Views/Fuels/Create.cshtml
+++ b/VehicleLog_webForm/Vehicle_Log_MVC/Vehicle_Log_MVC/Views/Fuels/Create.cshtml
@@ -5,6 +5,11 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
+@* 
+    Este módulo representa a View da interface de adição / criação de novos combustíveis do banco de dados Fuel.
+    Nele é possível configurar e formatar a interface em si e seus componentes, como os campos de texto, e os botões.
+*@
+
 <section class="wrapper">
     <div class="row">
         <div class="col-md-12">
