--- a/VehicleLog_webForm/Vehicle_Log_MVC/Vehicle_Log_MVC/Views/Shared/_Layout.cshtml
+++ b/VehicleLog_webForm/Vehicle_Log_MVC/Vehicle_Log_MVC/Views/Shared/_Layout.cshtml
@@ -1,4 +1,9 @@
-﻿<!DOCTYPE html>
+﻿@*
+    Este módulo representa a View principal, a qual é utilizada pelas demais. 
+    Nela está definida o dashboard base do projeto e o primeiro a ser apresentado quando o projeto é executado.
+*@
+
+<!DOCTYPE html>
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
