--- a/VehicleLog_webForm/Vehicle_Log_MVC/Vehicle_Log_MVC/Views/ActiveVehicleDBs/Create.cshtml
+++ b/VehicleLog_webForm/Vehicle_Log_MVC/Vehicle_Log_MVC/Views/ActiveVehicleDBs/Create.cshtml
@@ -5,6 +5,12 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
+@* 
+    Este módulo representa a View da interface de adição / criação de novos veículos do banco de dados ActiveVehicleDB. 
+    Nele é possível configurar e formatar a interface em si e seus componentes, como os campos de texto, 
+    de listas e os botões.
+*@
+
 <section class="wrapper">
     <div class="row">
         <div class="col-md-12">
@@ -67,7 +73,7 @@
                             <label class="control-label col-md-2" style="font-size: large">Fuel Type</label>
                             <div class="col-md-10">
                                 <select name="FuelType" class="form-control">
-                                    @{ 
+                                    @{
                                         foreach (var item in (List<Vehicle_Log_MVC.Fuel>)ViewBag.fuelList)
                                         {
                                             <option value="@item.Fuel1">@item.Fuel1</option>
