--- a/VehicleLog_webForm/Vehicle_Log_MVC/Vehicle_Log_MVC/Views/Fuels/Index.cshtml
+++ b/VehicleLog_webForm/Vehicle_Log_MVC/Vehicle_Log_MVC/Views/Fuels/Index.cshtml
@@ -5,6 +5,11 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
+@*
+    Este módulo representa a View da interface Index, onde os itens do banco de dados Fuel serão listados.
+    Nele será possível configurar e formatar a interface e seus componentes, como quais elemebtos serão apresentadas.
+*@
+
 <section class="wrapper">
     <div class="row">
         <div class="col-md-12">
