--- a/VehicleLog_webForm/Vehicle_Log_MVC/Vehicle_Log_MVC/Views/Locations/Details.cshtml
+++ b/VehicleLog_webForm/Vehicle_Log_MVC/Vehicle_Log_MVC/Views/Locations/Details.cshtml
@@ -5,6 +5,11 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
+@*
+    Este módulo representa a View da interface de detalhes do item selecionado do banco de dados Locations.
+    Nele será possível configurar e formatar a interface e seus componentes listados.
+*@
+
 <section class="wrapper">
     <div class="row">
         <div class="col-md-12">
