--- a/VehicleLog_webForm/Vehicle_Log_MVC/Vehicle_Log_MVC/Views/Locations/Edit.cshtml
+++ b/VehicleLog_webForm/Vehicle_Log_MVC/Vehicle_Log_MVC/Views/Locations/Edit.cshtml
@@ -5,6 +5,12 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
+@*
+    Este módulo representa a View da interface de edição do item selecionado do banco de dados Locations.
+    Nele será possível configurar e formatar a interface e seus componentes, como os campos de texto,
+    de listas e os botões.
+*@
+
 <section class="wrapper">
     <div class="row">
         <div class="col-md-12">
